--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@microsoft/signalr": "^3.1.8",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "react": "~16.9.0",
@@ -17,6 +18,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-signalr": "^1.0.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.8",
     "react-navigation-stack": "^2.3.13"
